k8s/auth-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service-container
          image: logeshc12/healthx-auth-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-srv
spec:
  selector:
    app: auth-service
  ports:
    - name: auth-service-ports
      protocol: TCP
      port: 5001
      targetPort: 5001
