k8s/ingress-nginx-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  ingressClassName: nginx
  rules:
    - http:  # Removed `host: "*"`
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-srv
                port:
                  number: 5000
